--- a/rs1.yml
+++ b/rs1.yml
@@ -16,5 +16,5 @@ spec:
     spec:
       containers:
       - name: myweb-container
-        image: httpd
+        image: vimal13/apache-webserver-php
 
